--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 VITE_REACT_APP_API_URL = https://dph-backend.onrender.com/api
+
+VITE_REACT_APP_SERVICE_ID = service_pori0xy
+
+VITE_REACT_APP_TEMPLATE_ID = template_3xe8tgc
+
+VITE_REACT_APP_PUBLIC_KEY = ZnUpE7zWi6n_KeSea
