--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
